js/src/jit-test/tests/errors/bug1837366.js
function foo() {
    try {
        foo();
        /a/.exec();
    } catch (e) {
    }
}
foo();
